# AutoAgent

./: .augmentignore  .env.exemple  .env.template  README.md  buf.gen.yaml  buf.yaml  draft.md  functionnality.md  generale_principles_interaction.xml  justfile  pyrightconfig.json  schema.md  shrimp-rules.md  tools.md
backend/: .env.template  docker-compose.yml  init_ne4js.cypher  justfile
backend/go-core/: Dockerfile  go.mod  go.sum
backend/protos/: agent_service.proto  common.proto  reasoning_service.proto
backend/python-agent/: Dockerfile  pyproject.toml
backend/python-agent/src/agent_service_py/: server.py
backend/python-agent/src/agent_service_py/services/: agent_service.py
backend/python-agent/tests/: __init__.py  conftest.py
backend/python-agent/tests/docker/: docker-compose.test.yml
backend/python-agent/tests/integration/: __init__.py  test_grpc_server.py
backend/python-agent/tests/unit/: __init__.py  test_agent_service.py  test_protobuf_validation.py
backend/python-ia/: Dockerfile
backend/python-reasoning/: Dockerfile  pyproject.toml  requirements.txt
backend/python-reasoning/src/: main.py  reasoning_servicer.py
backend/python-reasoning/src/reasoning_service_py/: server.py
backend/python-reasoning/src/reasoning_service_py/services/: reasoning_service.py
backend/python-reasoning/tests/: __init__.py  conftest.py
backend/python-reasoning/tests/docker/: docker-compose.test.yml
backend/python-reasoning/tests/integration/: __init__.py  test_grpc_server.py
backend/python-reasoning/tests/unit/: __init__.py  test_protobuf_validation.py  test_reasoning_service.py
backend/tests/: go.mod
documentation/: architecture_systeme.md  definition_projet.md  definition_tools.md  feature_priorizations.md  feuille_route.md  plan_developpement.md  recommandation_pratique_configuration_frontend.md  schema_neo4j.md
documentation/planification /: checklist_clarification-mission_a2.md  clarification_mission.md
documentation/quality_check/: guide_methodologique_generation_prompt_deep-research.md  rapport_standard_quality_artifacts.md  standard_qualite_verificateur.md
documentation/specifications fonctionnelles/: a1 - creation mission chat .md  a2 - clarification guidee mission chat.md  a3 - canvas - tableau dynamique - planification mission.md  a4 - gestion des pieces jointes chat.md  a5 - resume et validatiojn initiale chat + canvas.md  a6 - definition limites ressources bases.md  b1 - vue globale des missions - liste.md  b2 - visualisation arbre tache.md  b3 - detail de la tache - canvas.md
documentation/ui_ux/: guide_technique_conception_ui.md
documentation/user stories/: a2-a3_clarification-mission.md  a2-a3_clarification-mission_futur.md
exemples/: exemple : application : aggrergation infos theatre.md  review synthese - les narratifes crypto en vogue actuellement.md
exemples/lyon theatre aggregator/: exemple : application : aggrergation infos theatre.md  mission_summary.md  planification.md  planification_methodology
exemples/recherche aller retour lyon paris/: mission_summary.md  prompt_utilisateur.md  recherche aller retour lyon paris.md  simulation.md
frontend/: .prettierignore  CHAT_INTERFACE_GUIDE.md  QUALITY_TOOLS_GUIDE.md  REACT_19_COMPATIBILITY.md  README.md  eslint.config.js  frontend_knowledge_base.xml  index.html  package-lock.json  package.json  prettier.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/autoagent-frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  README.md  index.css
prompts/: chief_technical_officer.md  domain_specialist.md  frontend_coder.xml  laison_agent.md  master_prompt_normal.xml  metaprompt.md  project_manager.md  prompt_partenaire_strategique_freelance_malte.xml  ux-ui_specialist.md
prompts/deep_research_gemini/: generate_cours_s3.md  generate_guide_technique_format_markdown.md  generate_guide_technique_setup_frontend.md  generate_template.md  master_prompt.md  master_prompt_v2.md  master_prompt_v3.xml
prompts/project_manager/: functionnality.md  prompt_project_manager.md
protos/autoagent_api/: agent_service.proto  common.proto  reasoning_service.proto
ressources/: Création d'un agent UX_UI_.md  cours_c3_dependof_style.html  cours_s3-temporal.html  style.css
ressources/rapports deep research gemini/: IMPORTANT - analyse_architecturale_mecanisme_validation_qualitatif_ia.md  analyse_appronfondie_dgraph.md  analyse_comparative_framework_spa_frontend.md  analyse_comparative_graphDB_backend.md  analyse_comparative_onlinePlatforms_text-to-Image.md  analyse_comparative_sandboxing.md  analyse_comparative_wireframe-generator.md  analyse_comparative_workflows_backend.md  analyse_critique_capacite_heuristique-jugement_ia.md  analyse_pratique_dev_llm.md  analyse_prescriptive_workflow-with-Knowledge-graph.md  cours_stockage-s3_temporal.md  definition_tools_essential.md  exploration_techniques_conversationelles.md  exploration_vue_proactive_suivi-mission.md  guide_mise-en-forme_rapport_markdown.md  guide_pratique_prompt_ingeniering_forPrompt.md  recherche_ux.md  (+9 more)
tools/: list.md
(+139 files in other folders)
