[tool.poetry]
name = "agent-service-py"
version = "0.1.0"
description = "AutoAgent Agent Session Service for executing tasks."
authors = ["AutoAgent Core Team <dev@autoagent.is>"]
license = "Proprietary"

packages = [{ include = "agent_service_py", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
# Note: autoagent-api will be installed from wheel in Docker build
# Core libraries
grpcio = "^1.60.0"
python-dotenv = "^1.0.0"
bufbuild-protovalidate-protocolbuffers-pyi = "31.1.0.1.20250612022732+297b8109523d"
bufbuild-protovalidate-protocolbuffers-python = "31.1.0.1.20250612022732+297b8109523d"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.60.0"
types-protobuf = "^6.30.0"
mypy = "^1.8.0"
pytest = "^8.0.0"

[[tool.poetry.source]]
name = "buf"
url = "https://buf.build/gen/python"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
